8076373: In 32-bit VM interpreter and compiled code process NaN values differently

Change interpreter to use XMM registers on x86_32 if they are available. Add stubs for methods transforming from/to int/long float/double.

Reviewed-by: kvn, mcberg